# gra-forum

./: LICENSE  README.md  gra-forum.rar  paper.tex  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  debate_example.py
gra_forum/: __init__.py  config.py
gra_forum/agents/: __init__.py  base.py  llm_agents.py  physical_agent.py
gra_forum/core/: __init__.py  gra_core.py  metrics.py
gra_forum/models/: __init__.py  data_models.py
gra_forum/orchestrator/: __init__.py  orchestrator.py
gra_forum/utils/: __init__.py  embeddings.py
tests/: __init__.py  test_gra_core.py  test_metrics.py  test_orchestrator.py
